--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl mb-8">Novo livro</h1>
+  <h1 class="font-bold text-blue-600 text-4xl mb-8">Novo livro</h1>
 
   <%= render "form", book: @book %>
 
